--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
         "prettier": "^2.8.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-router-dom": "^6.6.0",
         "react-scripts": "5.0.1",
         "source-map-explorer": "^2.5.3",
+        "styled-components": "^5.3.6",
         "web-vitals": "^2.1.4"
     }
 }
